crates/jolt_java_syntax/tests/snapshots/corpus__style__imports__comment_barrier_blank_lines.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
// travels with its import
import z.Zed;
import a.Alpha;

// keeps the blank line before it
import b.Beta;
class A {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ImportDeclaration
      ImportKw "import" @ 27..33 leading=[LineComment "// travels with its import", Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "z" @ 34..35
        Dot "." @ 35..36
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "Zed" @ 36..39
      Semicolon ";" @ 39..40
    ImportDeclaration
      ImportKw "import" @ 41..47 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "a" @ 48..49
        Dot "." @ 49..50
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "Alpha" @ 50..55
      Semicolon ";" @ 55..56
    ImportDeclaration
      ImportKw "import" @ 92..98 leading=[Newline "\n", Newline "\n", LineComment "// keeps the blank line before it", Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "b" @ 99..100
        Dot "." @ 100..101
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "Beta" @ 101..105
      Semicolon ";" @ 105..106
    ClassDeclaration
      ClassKw "class" @ 107..112 leading=[Newline "\n"] trailing=[Whitespace " "]
      Identifier "A" @ 113..114 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 115..116
        ClassBodyMemberList
        RBrace "}" @ 116..117
  Eof "" @ 118..118 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
