crates/jolt_java_syntax/tests/snapshots/corpus__style__imports__comment_barrier_removed_separator_multiple.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
import static java.utils.*;; /*hunt*/ ;
import one.last;
import aaa.Bbb;
class C {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ImportDeclaration
      ImportKw "import" @ 0..6 trailing=[Whitespace " "]
      StaticKw "static" @ 7..13 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "java" @ 14..18
        Dot "." @ 18..19
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "utils" @ 19..24
      Dot "." @ 24..25
      Star "*" @ 25..26
      Semicolon ";" @ 26..27
    EmptyDeclaration
      Semicolon ";" @ 27..28 trailing=[Whitespace " ", BlockComment "/*hunt*/", Whitespace " "]
    EmptyDeclaration
      Semicolon ";" @ 38..39
    ImportDeclaration
      ImportKw "import" @ 40..46 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "one" @ 47..50
        Dot "." @ 50..51
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "last" @ 51..55
      Semicolon ";" @ 55..56
    ImportDeclaration
      ImportKw "import" @ 57..63 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "aaa" @ 64..67
        Dot "." @ 67..68
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "Bbb" @ 68..71
      Semicolon ";" @ 71..72
    ClassDeclaration
      ClassKw "class" @ 73..78 leading=[Newline "\n"] trailing=[Whitespace " "]
      Identifier "C" @ 79..80 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 81..82
        ClassBodyMemberList
        RBrace "}" @ 82..83
  Eof "" @ 84..84 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
